2003-12-12  Pascal Obry  <p.obry@wanadoo.fr>

	* awsres.adb:
	(Version): Set to 1.2.
	(Create): If resource is compressed, register it with .gz
	 extension. Change code to register resource.

2003-12-10  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(GARGS): Add -m to avoid recompilation of ada2wsdl because of
	 ada2wsdl-options.adb regeneration.

2003-12-02  Pascal Obry  <p.obry@wanadoo.fr>

	* awsres.adb:
	(Version): Set to 1.1.
	Add support for -u and -z option to register uncompressed or
	 compressed resources.

2003-11-28  Pascal Obry  <p.obry@wanadoo.fr>

	* ada2wsdl-parser.adb:
	(Analyse_Package): Convert dot to dash to form a valid GNAT filename.

2003-11-26  Pascal Obry  <p.obry@wanadoo.fr>

	* ada2wsdl-generator.adb:
	Update output layout.
	
2003-11-26  Pascal Obry  <p.obry@wanadoo.fr>

	* ada2wsdl-parser.adb:
	(Analyse_Node): Handle A_Subtype_Declaration.
	(Analyse_Field): Handle subtypes.
	(Analyse_Type): Handle subtypes.

	* ada2wsdl-generator.adb:
	(Array_Constraint): New routine, returns array constraint.
	(Write_Array): Call Array_Constraint.

	* ada2wsdl.ads:
	(Version): Set to 1.0.

2003-11-26  Pascal Obry  <p.obry@wanadoo.fr>

	* ada2wsdl-parser.adb:
	(Register_Deferred): Moved to package level.
	(Analyse_Type): Add Deferred_U_Arrays table to handle properly
	 field in record whose type is an array with constraint. Code
	 clean-up. Generate deferred arrays definition after analysing
	 record fields. Properly handle constrained arrays
	 definition. Checks for unconstrained array derived types.
	(Array_Type_Suffix): New routine.
	(Analyse_Field): Check for unconstrained array definition. Record
	 a deferred array definition if needed.
	(Type_Name): Handles arrays. Checks for String special case.

	* ada2wsdl-generator.adb:
	(Definition) [Table]: Add Length field.
	(Start_Array): Add Length formal parameter, record Length into the
	 definition object.
	(Type_Exists): Properly checks for Table.
	Minor reformatting.

	* ada2wsdl-generator.ads: